--- a/app/src/main/res/layout/item_article_preview_spirit.xml
+++ b/app/src/main/res/layout/item_article_preview_spirit.xml
@@ -11,6 +11,7 @@
         android:layout_width="242dp"
         android:layout_height="135dp"
         android:scaleType="centerCrop"
+        android:background="@drawable/ic_baseline_filter_3_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +28,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
+        app:layout_constraintLeft_toRightOf="@+id/ivSpiritImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +45,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
+        app:layout_constraintLeft_toRightOf="@+id/ivSpiritImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +62,7 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
+        app:layout_constraintLeft_toRightOf="@+id/ivSpiritImage"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
