--- a/app/src/main/res/menu/filter_mars_pic_menu.xml
+++ b/app/src/main/res/menu/filter_mars_pic_menu.xml
@@ -1,31 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/cameraFhaz"
-        android:title="FHAZ"
-       />
-    <item android:id="@+id/cameraRhaz"
-        android:title="RHAZ"
-        />
-    <item android:id="@+id/cameraMast"
-        android:title="MAST"
-        />
-    <item android:id="@+id/cameraChemcam"
-        android:title="CHEMCAM"
-        />
-    <item android:id="@+id/cameraMahli"
-        android:title="MAHLI"
-        />
-    <item android:id="@+id/cameraMardi"
-        android:title="MARDI"
-        />
-    <item android:id="@+id/cameraNavcam"
-        android:title="NAVCAM"
-        />
-    <item android:id="@+id/cameraPancam"
-        android:title="PANCAM"
-        />
-    <item android:id="@+id/cameraMinites"
-        android:title="MINITES"
-        />
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_baseline_image_search_24"
+        android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
 </menu>
