--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -30,10 +30,13 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/imagePopup"
-            android:layout_width="375dp"
-            android:layout_height="175dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/image_view_popup"
+            android:layout_width="0dp"
+            android:layout_height="167dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_launcher_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
