--- a/app/src/main/res/navigation/mars_nav_graph.xml
+++ b/app/src/main/res/navigation/mars_nav_graph.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mars_nav_graph.xml"
     app:startDestination="@id/curiosityFragment">
     <fragment
         android:id="@+id/curiosityFragment"
         android:name="com.example.picmars.ui.fragments.CuriosityFragment"
-        android:label="CuriosityFragment" />
+        android:label="curiosity_fragment"
+        tools:layout="@layout/curiosity_fragment" />
     <fragment
         android:id="@+id/spiritFragment"
         android:name="com.example.picmars.ui.fragments.SpiritFragment"
-        android:label="SpiritFragment" />
+        android:label="opportunity_fragment"
+        tools:layout="@layout/opportunity_fragment" />
     <fragment
         android:id="@+id/opportunityFragment"
         android:name="com.example.picmars.ui.fragments.OpportunityFragment"
-        android:label="OpportunityFragment" />
-    <fragment
-        android:id="@+id/articleFragment"
-        android:name="com.example.picmars.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="opportunity_fragment"
+        tools:layout="@layout/opportunity_fragment" />
 </navigation>
