--- a/app/src/main/res/layout/curiosity_fragment.xml
+++ b/app/src/main/res/layout/curiosity_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +10,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_curiosity"
         android:layout_width="match_parent"
-        android:layout_height="603dp"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_photo_picmars" />
 
     <ProgressBar
@@ -20,6 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/text_view_error_curiosity"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_error_curiosity"
+        app:layout_constraintStart_toStartOf="@+id/text_view_error_curiosity"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_curiosity"
         tools:visibility="visible" />
 
     <TextView
@@ -28,9 +38,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/button_retry_curiosity"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:text="Results could not be loaded"
         android:textColor="@color/black"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/button_retry_curiosity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progress_bar_curiosity"
         tools:visibility="visible" />
 
     <Button
@@ -38,10 +53,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/black"
         android:text="Retry"
         android:textColor="#F05454"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view_curiosity"
+        app:layout_constraintStart_toStartOf="@+id/text_view_empty_curiosity"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_error_curiosity"
         tools:visibility="visible" />
 
     <TextView
@@ -49,9 +69,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginStart="11dp"
         android:text="No results for this query"
         android:textColor="@color/black"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/button_retry_curiosity"
+        app:layout_constraintStart_toStartOf="@+id/text_view_error_curiosity"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_error_curiosity"
         tools:visibility="visible" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
