--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -32,11 +32,11 @@
         <ImageView
             android:id="@+id/image_view_popup"
             android:layout_width="0dp"
-            android:layout_height="167dp"
+            android:layout_height="0dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,6 +53,7 @@
         <TextView
             android:id="@+id/txTakesDate"
             android:text="Çekilen Tarih"
+            android:layout_marginTop="10dp"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
