--- a/app/src/main/res/layout/spirit_fragment.xml
+++ b/app/src/main/res/layout/spirit_fragment.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:orientation="horizontal"
     tools:context=".ui.fragments.SpiritFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_spirit"
-        android:layout_width="match_parent"
-        android:layout_height="603dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_photo_picmars" />
 
     <ProgressBar
@@ -20,17 +25,26 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/text_view_error_spirit"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_empty_spirit"
+        app:layout_constraintStart_toStartOf="@+id/text_view_empty_spirit"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_spirit"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/text_view_error_spirit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/button_retry_curiosity"
+        android:layout_above="@id/button_retry_spirit"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:text="Results could not be loaded"
         android:textColor="@color/black"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/button_retry_spirit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progress_bar_spirit"
         tools:visibility="visible" />
 
     <Button
@@ -38,10 +52,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/black"
         android:text="Retry"
         android:textColor="#F05454"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view_spirit"
+        app:layout_constraintStart_toStartOf="@+id/text_view_empty_spirit"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_error_spirit"
         tools:visibility="visible" />
 
     <TextView
@@ -49,9 +68,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="8dp"
         android:text="No results for this query"
         android:textColor="@color/black"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/button_retry_spirit"
+        app:layout_constraintStart_toStartOf="@+id/text_view_error_spirit"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_error_spirit"
         tools:visibility="visible" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
