--- a/app/src/main/res/layout/activity_picmars.xml
+++ b/app/src/main/res/layout/activity_picmars.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginBottom="2dp"
+        android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
