--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/curiosityFragment"
         android:title="Curiosity"
-        android:icon="@drawable/ic_baseline_filter_1_24" />
+        android:enabled="true"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/curiosity" />
 
     <item android:id="@+id/opportunityFragment"
         android:title="Opportunity"
-        android:icon="@drawable/ic_baseline_filter_2_24" />
+        android:enabled="true"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/opportunity" />
 
     <item android:id="@+id/spiritFragment"
         android:title="Spirit"
-        android:icon="@drawable/ic_baseline_filter_3_24" />
+        android:enabled="true"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/spirit" />
 
 </menu>
